--- a/yudao-module-drug/pom.xml
+++ b/yudao-module-drug/pom.xml
@@ -32,5 +32,10 @@
             <groupId>cn.iocoder.boot</groupId>
             <artifactId>yudao-spring-boot-starter-mybatis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.iocoder.boot</groupId>
+            <artifactId>yudao-spring-boot-starter-redis</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
